syntax = "proto3";

package api;

import "basecoat_transport.proto";

service Basecoat {
  // Authentication routes
  rpc CreateAPIToken(CreateAPITokenRequest) returns (CreateAPITokenResponse);

  // System routes
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);

  // Account routes (Admin only)
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);

  // Contractor routes
  rpc GetContractor(GetContractorRequest) returns (GetContractorResponse);
  // rpc SearchContractors(SearchContractorsRequest)
  //     returns (SearchContractorsResponse);
  rpc ListContractors(ListContractorsRequest) returns (ListContractorsResponse);
  rpc CreateContractor(CreateContractorRequest)
      returns (CreateContractorResponse);
  rpc UpdateContractor(UpdateContractorRequest)
      returns (UpdateContractorResponse);
  // rpc DeleteContractor(DeleteContractorRequest)
  //     returns (DeleteContractorResponse);
}
